<!--Andres Vargas(N01359071), Ibrahim Abdiaziz(N01394807), Zachary Symons(N01390593), Jonathan Alexandris (N01352690)-->

<resources>
    <string name="app_name">Centurion</string>
    <string name="centurion_home_control_system">Centurion Home Control System</string>
    <string name="settings">Settings</string>
    <string name="thermostat">Thermostat</string>
    <string name="light">Light Control</string>
    <string name="c02">C02 Monitor</string>
    <string name="lock">Lock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_would_be_a_lock_screen">this would be a lock screen</string>
    <string name="back_message">Are you sure you want to close this close app?</string>
    <string name="back_exit">Exit App</string>
    <string name="back_yes">Yes</string>
    <string name="back_no">No</string>
    <string name="light_control_fragment">Light Control</string>
    <string name="carbon_monoxide_fragment">Carbon Monoxide Fragment</string>
    <string name="on_off">On/Off</string>
    <string name="timer">Timer</string>
    <string name="light_schedule">Active Hours</string>
    <string name="are_you_sure">Are you sure you want to call 911?</string>
    <string name="emergCall">Emergency Call</string>
    <string name="carbon_emergency_button">Contact EMS</string>
    <string name="current_c02_level_txtview">CURRENT C02 LEVEL:</string>
    <string name="placeholder_carbon">no current reading</string>
    <string name="safe_carbon_txtview">SAFE</string>
    <string name="moderate_carbon_txtview">MODERATE</string>
    <string name="unhealthy_carbon_txtview">UNHEALTHY</string>
    <string name="hazardous_carbon_txtview">HAZARDOUS</string>
    <string name="light_control">Light Control</string>
    <string name="lock_control">Lock Control</string>
    <string name="latest_activity">"Recent Activity: "</string>
    <string name="SampleTime">October 12th 02:29</string>
    <string name="recent_activity">Recent Activity:</string>
    <string name="helpmenu">help</string>
    <string name="activity_log">Activity Log</string>
    <string name="settingsMenu">settings</string>
    <string name="aboutMenu">about</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="light_bulb">Light Bulb</string>
    <string name="toggle_dark_light_mode">Toggle Dark/Light Mode</string>
    <string name="unlocked">Unlocked</string>

    <string-array name="timerArray">
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
    </string-array>
    <string-array name="timeMinutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="timeHours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="lockBTN">Lock</string>
    <string name="toggle_portrait_lock">Toggle Portrait Lock</string>
    <string name="change_taskbar_colour">Change Taskbar Colour</string>
    <string name="lock_state">Lock State:</string>
    <string name="locked">Locked</string>
    <string name="humidityreading">0%</string>
    <string name="temperaturereading">0.00 C</string>
    <string name="randomNumber">1122969682</string>
    <string name="feedback">Feedback</string>
    <string name="how_would_you_rate_our_app">How would you rate our app?</string>
    <string name="your_rating">Your Rating:</string>
    <string name="change_app_theme">change app theme</string>
    <string name="enter_name">Enter your name: </string>
    <string name="project_name">Centurion Home Control System</string>
    <string name="team_name">Centurion</string>
    <string name="rating_bad">Bad </string>
    <string name="out_of_five">/5</string>
    <string name="ok">OK </string>
    <string name="good">GOOD </string>
    <string name="great">GREAT </string>
    <string name="amazing">AMAZING </string>
    <string name="ratingText">Your Rating: \n</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_any_comments_you_have">Enter any comments you have</string>
    <string name="FeedbackSubmitBTN">Submit</string>
    <string name="on_offlandscape_fan">ON/OFF</string>
    <string name="on_off_landscape_light">ON/OFF</string>
    <string name="current_temperature_landscape_home">Current Temperature:</string>
    <string name="fan_control_landscape_home">Fan Control</string>
    <string name="on_off_light_home">ON/OFF</string>
    <string name="on_off_fan_home">ON/OFF</string>
    <string name="fan_control_home">Fan Control</string>
    <string name="light_control_home">Light Control</string>
    <string name="current_temperature_home">Current Temperature:</string>
    <string name="temperature_control_landscape_therm">Temperature Control</string>
    <string name="desired_temperature_landscape_temp">Desired Temperature</string>
    <string name="fan_switch_landscape_temp">Fan Switch</string>
    <string name="desired_temperature_temp">Desired Temperature</string>
    <string name="fan_switch_temp">Fan Switch</string>
    <string name="temperature_control_temp">Temperature Control</string>
    <string name="home_drawerview">Home</string>
    <string name="switch1">Switch</string>
    <string name="show_current_c02_level_btn">Show Current C02 Level</string>
    <string name="emergency_notifications">Emergency Notifications</string>
    <string name="toasts">Toasts</string>
    <string name="general_notifications">General Notifications</string>
    <string name="user_id">User ID:</string>
    <string name="greet">Thanks for your feedback!</string>
    <string name="complete">Loading Complete</string>
    <string name="latest_rfid">Latest RFID</string>
    <string name="centurion_home_control">Centurion Home Control</string>
    <string name="user">User:</string>
    <string name="card_id">Card ID:</string>
    <string name="switchOnLight">Light Switched On</string>
    <string name="switchOffLight">Light Switched Off</string>

</resources>