<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEBB6">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="141dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="123dp"
        android:layout_height="66dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="104dp"
        android:text="@string/on_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer_tv"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:gravity="left"
        android:text="@string/timer"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:text="@string/light_schedule"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Time"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:text="End Time"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/light_control"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="72dp"
        android:layout_height="88dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/clock" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="73dp"
        android:layout_height="89dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/clock" />

</androidx.constraintlayout.widget.ConstraintLayout>