<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/burgundy"
    android:backgroundTint="@color/burgundy"
    tools:context=".CarbonMonoxide.CarbonMonoxideFrag">

    <!--User ID value-->


    <!--User name value-->

    <!--Lock control label-->

    <TextView
        android:id="@+id/latestAccessLabel2"
        android:layout_width="236dp"
        android:layout_height="38dp"

        android:text="@string/user_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/CardNum"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:text="@string/card_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/Person"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <TextView
        android:id="@+id/latestAccessLabel3"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/lockLogo"
        android:layout_width="330dp"
        android:layout_height="129dp"
        android:text="@string/lock_control"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <!--Access value-->

    <!--Lock image-->

    <TextView
        android:id="@+id/latestAccessLabel"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <ImageButton
        android:id="@+id/lockBTN"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="277dp"
        android:layout_height="169dp"
        android:src="@drawable/lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        tools:ignore="SpeakableTextPresentCheck" />

    <!--Lock state label-->
    <TextView
        android:layout_width="365dp"
        android:layout_height="77dp"
        android:text="@string/lock_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <!--Lock state value-->
    <TextView
        android:layout_width="271dp"
        android:id="@+id/lockTV"
        android:layout_height="54dp"
        android:text="@string/locked"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <!--RFID image-->
    <ImageView
        android:layout_width="166dp"
        android:layout_height="104dp"
        android:src="@drawable/rfid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/home"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />

</androidx.constraintlayout.widget.ConstraintLayout>