<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Thermostat.ThermostatFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/burgundy">

        <TextView
            android:id="@+id/fantext2"
            android:layout_width="@dimen/imagewidth"
            android:layout_height="@dimen/textheight"
            android:text="Fan Switch"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681" />

        <ImageView
            android:id="@+id/roomtemp"
            android:layout_width="@dimen/imagewidth"
            android:layout_height="@dimen/imageheight"
            android:src="@drawable/roomtemp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.234" />

        <TextView
            android:id="@+id/TemperatureReading"
            android:layout_width="@dimen/textwidth"
            android:layout_height="@dimen/textheight"
            android:text="@string/temperaturereading"
            android:textAlignment="center"
            android:textSize="@dimen/textsize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/HumidityReading"
            android:layout_width="@dimen/textwidth"
            android:layout_height="@dimen/textheight"
            android:text="@string/humidityreading"
            android:textAlignment="center"
            android:textSize="@dimen/textsize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <ImageView
            android:id="@+id/humidity"
            android:layout_width="@dimen/imagewidth"
            android:layout_height="@dimen/imageheight"
            android:src="@drawable/humidity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.234" />

        <Switch
            android:id="@+id/fanSwitch"
            android:layout_width="@dimen/textwidth"
            android:layout_height="@dimen/textheight"
            android:text="@string/on_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841" />

        <TextView
            android:id="@+id/fantext"
            android:layout_width="@dimen/imagewidth"
            android:layout_height="@dimen/textheight"
            android:text="Desired temp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.682" />

        <ImageButton
            android:id="@+id/increment"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:inputType="number"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@id/decrement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/increment"
            tools:text="99" />

        <ImageButton
            android:id="@+id/decrement"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>